--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=false
 
 # ===============================
